fix: width and layout shift

--- a/apps/dashboard/src/app/globals.css
+++ b/apps/dashboard/src/app/globals.css
@@ -8,6 +8,10 @@
 	@apply border-neutral-700;
 }
 
+html {
+	scrollbar-gutter: stable;
+}
+
 h1,
 h2,
 h3,
